--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,11 @@
   box-sizing: border-box;
 }
 
+body {
+  background: linear-gradient(to bottom left, #ff3131 40%, #ff914d 100%);
+  min-height: 100vh;
+}
+
 .homepage__main {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -26,23 +31,29 @@
 
   display: flex;
   align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 20px;
+  gap: 30px;
+
+  padding: 30px;
   border-radius: 10px;
   box-shadow: 0 24px 48px rgba(0, 0, 0, 0.075);
 
   font-family: "Montserrat", sans-serif;
   color: #f8f9fa;
+  min-height: 300px;
+}
+
+.homepage__card--left,
+.homepage__card--right {
+  flex: 1;
 }
 
 .homepage__card__img-container {
-  height: 50px;
-  margin-bottom: 10px;
+  height: 150px;
 }
 
 .homepage__card__img {
   height: 100%;
+  width: auto;
 }
 
 .homepage__card__title {
@@ -52,7 +63,7 @@
 
 .homepage__card__description {
   font-size: 14px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .homepage__card__link:link,
@@ -72,41 +83,3 @@
 .homepage__card__link:active {
   opacity: 0.5;
 }
-
-/* :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-} */
