--- a/src/app/grass/grass.css
+++ b/src/app/grass/grass.css
@@ -1,3 +1,96 @@
-body {
-  background-color: green;
+.grass__wrapper {
+  background-color: #fff;
+}
+
+.grass__main {
+  background-color: #fff;
+  min-height: 100vh;
+  max-width: 1400px;
+  margin: 0 auto;
+  color: #000;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-template-rows: auto;
+  gap: 50px;
+
+  padding: 50px 100px;
+}
+
+.grass__card {
+  box-shadow: 0 24px 48px rgba(0, 0, 0, 0.075);
+
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+  flex-direction: column;
+  padding: 20px;
+  border-radius: 20px;
+  max-width: 350px;
+  position: relative;
+}
+
+.grass__card--img-container {
+  height: 150px;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  align-self: center;
+  border-radius: 100%;
+  background-color: #d3f9d8;
+}
+
+.grass__card--img {
+  height: 100%;
+  width: auto;
+}
+
+.grass__card--title {
+  text-align: center;
+  text-transform: capitalize;
+  margin-bottom: 10px;
+}
+
+.grass__card--hnw {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 30px;
+  gap: 20px;
+  border-top: 1px solid rgb(128, 128, 128, 0.2);
+  border-bottom: 1px solid rgb(128, 128, 128, 0.2);
+  margin-bottom: 20px;
+}
+
+.height,
+.weight {
+  background-color: #ebfbee;
+  color: #2b8a3e;
+  padding: 3px;
+}
+
+.height-value,
+.weight-value {
+  font-weight: bold;
+}
+
+.grass__abilities--title {
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.grass__abilities--list {
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  grid-template-rows: auto;
+  row-gap: 15px;
+  column-gap: 10px;
+}
+
+.grass__abilities--list-item {
+  background-color: #2b8a3e;
+  text-align: center;
+  padding: 2px 4px;
+  border-radius: 10px;
+  color: #ebfbee;
 }
