--- a/src/app/grass/grass.css
+++ b/src/app/grass/grass.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
+body {
+  font-family: "Montserrat", sans-serif;
+}
+
 .grass__wrapper {
   background-color: #fff;
 }
@@ -8,20 +12,37 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: red;
+  max-width: 1150px;
+  background-color: #ebfbee;
+  padding: 10px 20px;
+  margin: 50px auto;
+  /* border: 1px solid #2b8a3e; */
+  border-radius: 10px;
+  padding-bottom: 20px;
+  position: relative;
+}
+
+.grass__input-label {
+  position: absolute;
+  left: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  padding-bottom: 10px;
 }
 
 .grass__input {
   border: none;
+  border-bottom: 1px solid #2b8a3e;
   max-width: 1150px;
   width: 100%;
-  padding: 15px 20px;
-  margin: 50px 0;
-  background-color: #ebfbee;
   color: #2b8a3e;
   font-family: "Montserrat", sans-serif;
-  font-size: 15px;
-  border-radius: 10px;
-  border: 1px solid #2b8a3e;
+  font-size: 14px;
+  background-color: #ebfbee;
+  padding: 10px;
+  padding-left: 30px;
+  outline: none;
 }
 
 .grass__input::placeholder {
@@ -30,7 +51,7 @@
 
 .grass__input:active,
 .grass__input:hover {
-  outline: 1px solid #d3f9d8;
+  /* outline: 1px solid #d3f9d8; */
 }
 
 .grass__main {
