--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,8 +6,6 @@
   box-sizing: border-box;
 }
 
-
-
 .homepage__main {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -37,6 +35,7 @@
   font-family: "Montserrat", sans-serif;
   color: #f8f9fa;
   min-height: 300px;
+  z-index: 100;
 }
 
 .homepage__card--left,
@@ -96,7 +95,6 @@
   overflow: hidden;
   min-height: 100vh;
 }
-
 
 .home-bg {
   position: relative;
